changed fetches  to reflect back end routes and fixed renders added some css spacing

--- a/src/css/rated-quotes.css
+++ b/src/css/rated-quotes.css
@@ -12,10 +12,9 @@ ul {
   display: flex;
   justify-content: center;
 }
-.quote-wrap {
-  margin: 20px;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+
+
+.rated-quotes-wrap ul>li {
+  text-align: center;
+  padding-bottom: 15px;
 }
